--- a/slider.html
+++ b/slider.html
@@ -4,12 +4,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       background: #111;
       font-family: Arial, sans-serif;
       color: white;
+      height: 100%;
+      overflow: hidden; /* ❌ Evitar scroll nativo */
     }
     .swiper {
       width: 100vw;
@@ -26,14 +28,6 @@
       max-width: 100%;
       max-height: 100%;
       object-fit: contain;
-    }
-    .overlay {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      background: none;
-      padding: 0;
-      box-sizing: border-box;
     }
   </style>
 </head>
@@ -70,11 +64,14 @@
 
         const swiper = new Swiper('.swiper', {
           loop: true,
-          direction: 'vertical', // 📌 Solo vertical
+          direction: 'vertical',
           slidesPerView: 1,
           spaceBetween: 10,
-          pagination: false, // ❌ Sin indicadores
-          navigation: false, // ❌ Sin flechas
+          allowTouchMove: true, // ✅ Asegura que el toque funcione
+          simulateTouch: true, // ✅ Simula drag con dedo
+          touchAngle: 45, // ✅ Ángulo para permitir swipe vertical
+          pagination: false,
+          navigation: false
         });
 
         // 📌 Enviar el primer anuncio
