--- a/slider.html
+++ b/slider.html
@@ -76,7 +76,7 @@
           slide.appendChild(overlay);
           swiperWrapper.appendChild(slide);
 
-          // Crear un objeto de datos simulado para que App Inventor no reciba una lista vacía
+          // 📌 Creando un objeto de datos simulado para App Inventor
           anunciosData = [{ titulo: "Sin anuncios", descripcion: "0", comentarios: "" }];
 
         } else {
