--- a/slider.html
+++ b/slider.html
@@ -78,10 +78,10 @@
 
           // 📌 Creando un objeto de datos simulado con todas las claves
           anunciosData = [{ 
-            titulo: "Sin anuncios", 
-            descripcion: "0", 
+            titulo: "sin anuncio", 
+            descripcion: "sin anuncio", 
             url: "sin anuncios.png", 
-            comentarios: "", 
+            comentarios: "sin anuncio", 
             DeleteURL: "", 
             Autor: "", 
             Correo: "", 
