--- a/slider.html
+++ b/slider.html
@@ -61,7 +61,7 @@
   <div class="swiper">
     <div class="swiper-wrapper"></div>
   </div>
-  <div id="loader">Cargando anuncios <span class="spinner">⏳</span></div>
+  <div id="loader"><span class="spinner">⏳</span></div>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
